--- a/styles.html
+++ b/styles.html
@@ -1,1 +1,9 @@
-<div class="button">Le Button</div>
+<head>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href="style.css" rel="stylesheet" type="text/css" media="all">
+</head>
+<body>
+<div id="wrapper">
+<a class="button" href="styles.html">Le Button</a>
+</div>
+</body>
