--- a/styles.html
+++ b/styles.html
@@ -1,9 +1,11 @@
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
 <div id="wrapper">
+<div class="box">
+<p>This is some text about how the quick brown fox jumps over the lazy dog!</p>
 <a class="button" href="styles.html">Le Button</a>
+</div>
 </div>
 </body>
