compressed image index amd style update

--- a/styles.html
+++ b/styles.html
@@ -1,5 +1,5 @@
 <head>
-	<link href="style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="./style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
 <div id="wrapper">
