nav styling that didn't commit

--- a/Art/index.html
+++ b/Art/index.html
@@ -3,15 +3,15 @@
 </head>
 <body>
 <div id="wrapper">
-<h1 style="color:white;">BLOB GAME</h1>
-<div class="box" style="padding-top:0px;">
-<div class="nav">
+<img src="../images/tmpbanner.png">
+<nav class="nav">
 	<ul>
-		<li><a href="../index.html">Download</a></li>
-		<li><a href="../Blog/index.html">Blog</a></li>
+		<li><a href="../">Download</a></li>
+		<li><a href="../Blog/">Blog</a></li>
 		<li><a href="#">Art</a></li>
 	</ul>
-</div>
+</nav>
+<div class="box" style="padding-top:0px;">
 <h2>Q Art Here :D</h2>
 </div>
 </div>
