New nav button, added faq page

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -8,13 +8,13 @@
 	<ul>
 		<li><a href="../">Download</a></li>
 		<li><a href="../Blog/">Blog</a></li>
-		<li><a href="#">Art</a></li>
-		<li><a href="../Faq/">FAQ</a></li>
+		<li><a href="../Art/">Art</a></li>
+		<li><a href="#">FAQ</a></li>
 		<li><a href="#forumDomain">Forum</a></li>
 	</ul>
 </nav>
 <div class="box" style="padding-top:0px;">
-<h2>Q Art Here :D</h2>
+<h2>FAQ Here</h2>
 </div>
 </div>
 </body>
