--- a/Faq/index.html
+++ b/Faq/index.html
@@ -8,7 +8,7 @@
 	<ul>
 		<li><a href="../">Download</a></li>
 		<li><a href="../Blog/">Blog</a></li>
-		<li><a href="../Art/">Art</a></li>
+		<li><a href="../Media/">Media</a></li>
 		<li><a href="#">FAQ</a></li>
 		<li><a href="#forumDomain">Forum</a></li>
 	</ul>
