--- a/Media/index.html
+++ b/Media/index.html
@@ -8,7 +8,7 @@
 	<ul>
 		<li><a href="../">Download</a></li>
 		<li><a href="../Blog/">Blog</a></li>
-		<li><a href="#">Art</a></li>
+		<li><a href="#">Media</a></li>
 		<li><a href="../Faq/">FAQ</a></li>
 		<li><a href="#forumDomain">Forum</a></li>
 	</ul>
