initial version of gallery

--- a/Media/index.html
+++ b/Media/index.html
@@ -1,5 +1,10 @@
 <head>
-	<link href="../style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../css/style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../css/lightbox.css" rel="stylesheet" />
+	<script src="../js/jquery.js"></script>
+	<script src="../js/lightbox.js"></script>
+	<link rel="icon" href="../images/icon.png" type="image/png" sizes="128x128">
+	<title>Blob Game</title>
 </head>
 <body>
 <div id="wrapper">
@@ -13,8 +18,16 @@
 		<li><a href="#forumDomain">Forum</a></li>
 	</ul>
 </nav>
-<div class="box" style="padding-top:0px;">
-<h2>Q Art Here :D</h2>
+<div class="box gallery" style="padding-top:0px;">
+	<a href="../images/conveyer_update.gif" data-lightbox="gallery" title="Conveyor Belt Update"><img src="../images/conveyer_update.gif"></a>
+	<a href="../images/conveyer_update_polish.gif" data-lightbox="gallery" title="Conveyor Belt Tweaks"><img src="../images/conveyer_update_polish.gif"></a>
+	<a href="../images/danno_shader.jpg" data-lightbox="gallery" title="Dan's Adventures with Shaders Pt 1"><img src="../images/danno_shader.jpg"></a>
+	<a href="../images/danno_shader1.jpg" data-lightbox="gallery" title="Dan's Adventures with Shaders Pt 2"><img src="../images/danno_shader1.jpg"></a>
+	<a href="../images/danno_shader2.jpg" data-lightbox="gallery" title="Dan's Adventures with Shaders Pt 3"><img src="../images/danno_shader2.jpg"></a>
+	<a href="../images/vacuum_bot.jpg" data-lightbox="gallery" title="New Art for Vacuum Bot"><img src="../images/vacuum_bot.jpg"></a>
+	<a href="../images/vacuum_bot1.jpg" data-lightbox="gallery" title="Vacuum Bot in Action"><img src="../images/vacuum_bot1.jpg"></a>
+	<a href="../images/bezier.jpg" data-lightbox="gallery" title="Blob with Bezier Curves"><img src="../images/bezier.jpg"></a>
+	<a href="../images/poly_blob.jpg" data-lightbox="gallery" title="Blob Polygonized"><img src="../images/poly_blob.jpg"></a>
 </div>
 </div>
 </body>
