--- a/Media/index.html
+++ b/Media/index.html
@@ -1,10 +1,33 @@
 <head>
 	<link href="../css/style.css" rel="stylesheet" type="text/css" media="all">
-	<link href="../css/lightbox.css" rel="stylesheet" />
-	<script src="../js/jquery.js"></script>
-	<script src="../js/lightbox.js"></script>
 	<link rel="icon" href="../images/icon.png" type="image/png" sizes="128x128">
 	<title>Blob Game</title>
+	
+	<!-- Add jQuery library -->
+	<script type="text/javascript" src="../js/jquery-1.10.1.min.js"></script>
+
+	<!-- Add mousewheel plugin (this is optional) -->
+	<script type="text/javascript" src="../js/jquery.mousewheel-3.0.6.pack.js"></script>
+
+	<!-- Add fancyBox main JS and CSS files -->
+	<script type="text/javascript" src="../fancybox/jquery.fancybox.js?v=2.1.5"></script>
+	<link rel="stylesheet" type="text/css" href="../fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
+
+	<!-- Add Button helper (this is optional) -->
+	<link rel="stylesheet" type="text/css" href="../fancybox/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
+	<script type="text/javascript" src="../fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+
+	<!-- Add Thumbnail helper (this is optional) -->
+	<link rel="stylesheet" type="text/css" href="../fancybox/helpers/jquery.fancy-gallery.css?v=1.0.7" />
+	<script type="text/javascript" src="../fancybox/helpers/jquery.fancy-gallery.js?v=1.0.7"></script>
+
+	<!-- Add Media helper (this is optional) -->
+	<script type="text/javascript" src="../fancybox/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$('.fancy-gallery').fancybox();
+		});
+	</script>
 </head>
 <body>
 <div id="wrapper">
@@ -19,15 +42,16 @@
 	</ul>
 </nav>
 <div class="box gallery" style="padding-top:0px;">
-	<a href="../images/conveyer_update.gif" data-lightbox="gallery" title="Conveyor Belt Update"><img src="../images/conveyer_update.gif"></a>
-	<a href="../images/conveyer_update_polish.gif" data-lightbox="gallery" title="Conveyor Belt Tweaks"><img src="../images/conveyer_update_polish.gif"></a>
-	<a href="../images/danno_shader.jpg" data-lightbox="gallery" title="Dan's Adventures with Shaders Pt 1"><img src="../images/danno_shader.jpg"></a>
-	<a href="../images/danno_shader1.jpg" data-lightbox="gallery" title="Dan's Adventures with Shaders Pt 2"><img src="../images/danno_shader1.jpg"></a>
-	<a href="../images/danno_shader2.jpg" data-lightbox="gallery" title="Dan's Adventures with Shaders Pt 3"><img src="../images/danno_shader2.jpg"></a>
-	<a href="../images/vacuum_bot.jpg" data-lightbox="gallery" title="New Art for Vacuum Bot"><img src="../images/vacuum_bot.jpg"></a>
-	<a href="../images/vacuum_bot1.jpg" data-lightbox="gallery" title="Vacuum Bot in Action"><img src="../images/vacuum_bot1.jpg"></a>
-	<a href="../images/bezier.jpg" data-lightbox="gallery" title="Blob with Bezier Curves"><img src="../images/bezier.jpg"></a>
-	<a href="../images/poly_blob.jpg" data-lightbox="gallery" title="Blob Polygonized"><img src="../images/poly_blob.jpg"></a>
+	<a href="../images/conveyer_update.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Conveyor Belt Update"><img src="../images/conveyer_update.gif"></a>
+	<a href="../images/conveyer_update_polish.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Conveyor Belt Tweaks"><img src="../images/conveyer_update_polish.gif"></a>
+	<a href="../images/danno_shader.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dan's Adventures with Shaders Pt 1"><img src="../images/danno_shader.jpg"></a>
+	<a href="../images/danno_shader1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dan's Adventures with Shaders Pt 2"><img src="../images/danno_shader1.jpg"></a>
+	<a href="../images/danno_shader2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dan's Adventures with Shaders Pt 3"><img src="../images/danno_shader2.jpg"></a>
+	<a href="../images/vacuum_bot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="New Art for Vacuum Bot"><img src="../images/vacuum_bot.jpg"></a>
+	<a href="../images/vacuum_bot1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum Bot in Action"><img src="../images/vacuum_bot1.jpg"></a>
+	<a href="../images/bezier.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob with Bezier Curves"><img src="../images/bezier.jpg"></a>
+	<a href="../images/poly_blob.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Polygonized"><img src="../images/poly_blob.jpg"></a>
+	<a href="https://www.youtube.com/embed/tt483XEo5cg" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Youtube Test"><img src="http://img.youtube.com/vi/tt483XEo5cg/0.jpg"></a>
 </div>
 </div>
 </body>
