--- a/Media/index.html
+++ b/Media/index.html
@@ -34,17 +34,30 @@
 		<li><a href="#forumDomain">Forum</a></li>
 	</ul>
 </nav>
+
 <div class="box gallery" style="padding-top:0px;">
-	<a href="../images/conveyer_update.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Conveyor Belt Update"><img src="../images/conveyer_update.gif"></a>
-	<a href="../images/conveyer_update_polish.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Conveyor Belt Tweaks"><img src="../images/conveyer_update_polish.gif"></a>
-	<a href="../images/danno_shader.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dan's Adventures with Shaders Pt 1"><img src="../images/danno_shader.jpg"></a>
-	<a href="../images/danno_shader1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dan's Adventures with Shaders Pt 2"><img src="../images/danno_shader1.jpg"></a>
-	<a href="../images/danno_shader2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dan's Adventures with Shaders Pt 3"><img src="../images/danno_shader2.jpg"></a>
-	<a href="../images/vacuum_bot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="New Art for Vacuum Bot"><img src="../images/vacuum_bot.jpg"></a>
-	<a href="../images/vacuum_bot1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum Bot in Action"><img src="../images/vacuum_bot1.jpg"></a>
-	<a href="../images/bezier.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob with Bezier Curves"><img src="../images/bezier.jpg"></a>
-	<a href="../images/poly_blob.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Polygonized"><img src="../images/poly_blob.jpg"></a>
-	<a href="https://www.youtube.com/embed/tt483XEo5cg" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Youtube Test"><img src="http://img.youtube.com/vi/tt483XEo5cg/0.jpg"></a>
+	<a href="../images/media/concept1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept1.jpg"></a>
+	<a href="../images/media/concept2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept2.jpg"></a>
+	<a href="../images/media/concept3.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept3.jpg"></a>
+	<a href="../images/media/LevelConceptA.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/LevelConceptA.jpg"></a>
+	<a href="../images/media/LevelConceptB.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/LevelConceptB.jpg"></a>
+	<a href="../images/media/blobeyes.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Positioning Blob's eyes"><img src="../images/media/blobeyes.jpg"></a>	
+	<a href="../images/media/ian.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="IBird testing out chains"><img src="../images/media/ian.jpg"></a>
+	<a href="../images/media/dano.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dano"><img src="../images/media/dano.jpg"></a>
+	<a href="../images/media/harrison.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Harrison"><img src="../images/media/harrison.jpg"></a>
+	<a href="../images/media/maru.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dinner after a meeting"><img src="../images/media/maru.jpg"></a>
+	<a href="../images/media/controllersupport.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First controller tests"><img src="../images/media/controllersupport.jpg"></a>
+	<a href="../images/media/12player.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Testing with 12 players"><img src="../images/media/12player.jpg"></a>
+	<a href="../images/media/smoothing.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Bezier smoothing"><img src="../images/media/smoothing.jpg"></a>
+	<a href="../images/media/blobcollision.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="interblob collisions demonstration"><img src="../images/media/blobcollision.jpg"></a>
+	<a href="../images/media/concave.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Rendering a concave blob"><img src="../images/media/concave.jpg"></a>
+	<a href="../images/media/suchanimation.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Such animation"><img src="../images/media/suchanimation.gif"></a>
+	<a href="../images/media/suchanimation2.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Wow... much improved"><img src="../images/media/suchanimation2.gif"></a>
+	<a href="../images/media/scrum.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Failed stand-up meeting"><img src="../images/media/scrum.jpg"></a>
+	<a href="../images/media/vacbot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum bot"><img src="../images/media/vacbot.jpg"></a>
+	<a href="../images/media/wormhole.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First instance of the wormhole bug"><img src="../images/media/wormhole.jpg"></a>
+	<a href="https://www.youtube.com/embed/tt483XEo5cg" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Lighting Demonstration"><img src="http://img.youtube.com/vi/tt483XEo5cg/0.jpg"></a>
+	<a href="https://www.youtube.com/embed/_oeuyI6cLV4" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Gates Demonstration"><img src="http://img.youtube.com/vi/_oeuyI6cLV4/0.jpg"></a>
 </div>
 </div>
 </body>
