updated media round 2

--- a/Media/index.html
+++ b/Media/index.html
@@ -36,23 +36,30 @@
 </nav>
 
 <div class="box gallery" style="padding-top:0px;">
-	<a href="../images/media/concept1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept1.jpg"></a>
-	<a href="../images/media/concept2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept2.jpg"></a>
-	<a href="../images/media/concept3.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept3.jpg"></a>
 	<a href="../images/media/LevelConceptA.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/LevelConceptA.jpg"></a>
 	<a href="../images/media/LevelConceptB.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/LevelConceptB.jpg"></a>
 	<a href="../images/media/blobeyes.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Positioning Blob's eyes"><img src="../images/media/blobeyes.jpg"></a>	
-	<a href="../images/media/ian.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="IBird testing out chains"><img src="../images/media/ian.jpg"></a>
+	<a href="../images/media/concept1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept1.jpg"></a>
+	<a href="../images/media/concept2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept2.jpg"></a>
+	<a href="../images/media/concept3.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept3.jpg"></a>
+	<a href="../images/media/Blob1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 1 (2007)"><img src="../images/media/Blob1.jpg"></a>
+	<a href="../images/media/Blob2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 2 (2010)"><img src="../images/media/Blob2.jpg"></a>
+	<a href="../images/media/Blob3.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 3 (2012)"><img src="../images/media/Blob3.jpg"></a>
+	<a href="../images/media/points.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Particles used for collision in earier versions of Blob Game"><img src="../images/media/points.jpg"></a>
+	<a href="../images/media/springs.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Springs shown for a single particle"><img src="../images/media/springs.jpg"></a>
+	<a href="../images/media/bodies.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Triangle tank tread used in current version"><img src="../images/media/bodies.jpg"></a>
+	<a href="../images/media/ian.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Ibird testing out chains"><img src="../images/media/ian.jpg"></a>
 	<a href="../images/media/dano.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dano"><img src="../images/media/dano.jpg"></a>
 	<a href="../images/media/harrison.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Harrison"><img src="../images/media/harrison.jpg"></a>
 	<a href="../images/media/maru.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dinner after a meeting"><img src="../images/media/maru.jpg"></a>
 	<a href="../images/media/controllersupport.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First controller tests"><img src="../images/media/controllersupport.jpg"></a>
 	<a href="../images/media/12player.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Testing with 12 players"><img src="../images/media/12player.jpg"></a>
 	<a href="../images/media/smoothing.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Bezier smoothing"><img src="../images/media/smoothing.jpg"></a>
-	<a href="../images/media/blobcollision.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="interblob collisions demonstration"><img src="../images/media/blobcollision.jpg"></a>
+	<a href="../images/media/blobcollision.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Inter-blob collisions demonstration"><img src="../images/media/blobcollision.jpg"></a>
 	<a href="../images/media/concave.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Rendering a concave blob"><img src="../images/media/concave.jpg"></a>
 	<a href="../images/media/suchanimation.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Such animation"><img src="../images/media/suchanimation.gif"></a>
-	<a href="../images/media/suchanimation2.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Wow... much improved"><img src="../images/media/suchanimation2.gif"></a>
+	<a href="../images/media/suchanimation2.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Wow... much improved"><img src="../images/media/suchanimation2.gif">
+	<a href="../images/media/butts.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Marketing brainstorm"><img src="../images/media/butts.jpg"></a>
 	<a href="../images/media/scrum.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Failed stand-up meeting"><img src="../images/media/scrum.jpg"></a>
 	<a href="../images/media/vacbot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum bot"><img src="../images/media/vacbot.jpg"></a>
 	<a href="../images/media/wormhole.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First instance of the wormhole bug"><img src="../images/media/wormhole.jpg"></a>
