oops... forgot to close tag

--- a/Media/index.html
+++ b/Media/index.html
@@ -58,7 +58,7 @@
 	<a href="../images/media/blobcollision.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Inter-blob collisions demonstration"><img src="../images/media/blobcollision.jpg"></a>
 	<a href="../images/media/concave.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Rendering a concave blob"><img src="../images/media/concave.jpg"></a>
 	<a href="../images/media/suchanimation.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Such animation"><img src="../images/media/suchanimation.gif"></a>
-	<a href="../images/media/suchanimation2.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Wow... much improved"><img src="../images/media/suchanimation2.gif">
+	<a href="../images/media/suchanimation2.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Wow... much improved"><img src="../images/media/suchanimation2.gif"></a>
 	<a href="../images/media/butts.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Marketing brainstorm"><img src="../images/media/butts.jpg"></a>
 	<a href="../images/media/scrum.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Failed stand-up meeting"><img src="../images/media/scrum.jpg"></a>
 	<a href="../images/media/vacbot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum bot"><img src="../images/media/vacbot.jpg"></a>
