faq and css expanding

--- a/Media/index.html
+++ b/Media/index.html
@@ -1,5 +1,6 @@
 <head>
 	<link href="../css/style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="media.css" rel="stylesheet" type="text/css" media="all">
 	<link rel="icon" href="../images/icon.png" type="image/png" sizes="128x128">
 	<title>Blob Game</title>
 	
