started FAQ and updated media

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -22,19 +22,19 @@
 <header>
 <h1>Frequently Asked Questions</h1>
 <ul>
-	<li><a href="#Birds" rel="internal">Birds</a></li>
+	<li><a href="#Prefs" rel="internal">How do I change game preferences?</a></li>
 	<li><a href="#Dogs" rel="internal">Dogs</a></li>
 	<li><a href="#Cats" rel="internal">Cats</a></li>
 </ul>
 <hr>
 </header>
-<h2 id="Birds">Birds</h2>
-<p>
-Birds (class Aves or clade Avialae) are feathered, winged, bipedal, endothermic (warm-blooded), egg-laying, vertebrate animals. With around 10,000 living species, they are the most speciose class of tetrapod vertebrates. All present species belong to the subclass Neornithes, and inhabit ecosystems across the globe, from the Arctic to the Antarctic. Extant birds range in size from the 5 cm (2 in) Bee Hummingbird to the 2.75 m (9 ft) Ostrich. The fossil record indicates that birds emerged within theropod dinosaurs during the Jurassic period, around 150 million years ago. Birds are the only members of the clade originating with the earliest dinosaurs to have survived the Cretaceous–Paleogene extinction event 66 million years ago.
-Modern birds are characterised by feathers, a beak with no teeth, the laying of hard-shelled eggs, a high metabolic rate, a four-chambered heart, and a lightweight but strong skeleton. All living species of birds have wings; the most recent species without wings was the moa, which is generally considered to have become extinct in the 16th century. Wings are evolved forelimbs, and most bird species can fly. Flightless birds include ratites, penguins, and a number of diverse endemic island species. Some species of birds, particularly penguins and members of the Anatidae family, are adapted to swim. Birds also have unique digestive and respiratory systems that are highly adapted for flight. Some birds, especially corvids and parrots, are among the most intelligent animal species; a number of bird species have been observed manufacturing and using tools, and many social species exhibit cultural transmission of knowledge across generations.
-Many species undertake long distance annual migrations, and many more perform shorter irregular movements. Birds are social; they communicate using visual signals and through calls and songs, and participate in social behaviours, including cooperative breeding and hunting, flocking, and mobbing of predators. The vast majority of bird species are socially monogamous, usually for one breeding season at a time, sometimes for years, but rarely for life. Other species have polygynous ("many females") or, rarely, polyandrous ("many males") breeding systems. Eggs are usually laid in a nest and incubated by the parents. Most birds have an extended period of parental care after hatching.
-Many species are of economic importance, mostly as sources of food acquired through hunting or farming. Some species, particularly songbirds and parrots, are popular as pets. Other uses include the harvesting of guano (droppings) for use as a fertiliser. Birds figure prominently in all aspects of human culture from religion to poetry to popular music. About 120–130 species have become extinct as a result of human activity since the 17th century, and hundreds more before then. Currently about 1,200 species of birds are threatened with extinction by human activities, though efforts are underway to protect them.
-</p>
+<h2 id="Prefs">How do I change game preferences?</h2>
+<h3>Windows:</h3>
+<p> Click the <b>Start</b> button and enter <b>%userprofile%/.BlobGame/BlobPref.txt</b> into the search box.</p>
+<p><img src="../images/blobpref.jpg"></p>
+<br>
+<p> Change the value to 0 to disable a feature, 1 to enable, or set an interger value for width and height.</p>
+<p><img src="../images/blobpreftxt.jpg"></p>
 <h2 id="Dogs">Dogs</h2>
 <p>
 The domestic dog (Canis lupus familiaris)[2][3] is a subspecies of the gray wolf (Canis lupus), a member of the Canidae family of the mammalian order Carnivora. The term "domestic dog" is generally used for both domesticated and feral varieties. The dog was the first domesticated animal[4] and has been the most widely kept working, hunting, and pet animal in human history. The word "dog" can also refer to the male of a canine species,[5] as opposed to the word "bitch" which refers to the female of the species.
