--- a/Media/index.html
+++ b/Media/index.html
@@ -58,6 +58,9 @@
 	<a href="../images/media/suchanimation.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Such animation"><img src="../images/media/suchanimation.gif"></a>
 	<a href="../images/media/suchanimation2.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Wow... much improved"><img src="../images/media/suchanimation2.gif"></a>
 	<a href="../images/media/butts.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Marketing brainstorm"><img src="../images/media/butts.jpg"></a>
+	<a href="../images/media/knight.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob knight"><img src="../images/media/knight.jpg"></a>
+	<a href="../images/media/horse.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Also a blob knight"><img src="../images/media/horse.jpg"></a>
+	<a href="../images/media/aot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Three dimensional maneuver gear blob"><img src="../images/media/aot.jpg"></a>
 	<a href="../images/media/scrum.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Failed stand-up meeting"><img src="../images/media/scrum.jpg"></a>
 	<a href="../images/media/vacbot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum bot"><img src="../images/media/vacbot.jpg"></a>
 	<a href="../images/media/wormhole.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First instance of the wormhole bug"><img src="../images/media/wormhole.jpg"></a>
