--- a/Faq/index.html
+++ b/Faq/index.html
@@ -22,27 +22,30 @@
 <header>
 <h1>Frequently Asked Questions</h1>
 <ul>
-	<li><a href="#Prefs" rel="internal">How do I change game preferences?</a></li>
-	<li><a href="#Dogs" rel="internal">Dogs</a></li>
-	<li><a href="#Cats" rel="internal">Cats</a></li>
+	<li><a href="#Prefs" rel="internal">How do I modify my game preferences?</a></li>
+	<li><a href="#LoadCrash" rel="internal">How do I prevent the game from crashing during the loading screen?</a></li>
+	<li><a href="#Fast" rel="internal">How do I make the game run faster?</a></li>
+	<li><a href="#Slow" rel="internal">How do I make the game run slower?</a></li>
 </ul>
 <hr>
 </header>
-<h2 id="Prefs">How do I change game preferences?</h2>
+<h2 id="Prefs"><b>How do I modify my game preferences?</b></h2>
 <h3>Windows:</h3>
 <p> Click the <b>Start</b> button and enter <b>%userprofile%/.BlobGame/BlobPref.txt</b> into the search box.</p>
 <p><img src="../images/blobpref.jpg"></p>
 <br>
-<p> Change the value to 0 to disable a feature, 1 to enable, or set an interger value for width and height.</p>
+<p> Change the value to <b>0</b> to disable a feature, <b>1</b> to enable, or set an <b>interger value</b> for width and height. Remember to save after any changes. You can return to the default values by deleting this file and running the game.</p>
 <p><img src="../images/blobpreftxt.jpg"></p>
-<h2 id="Dogs">Dogs</h2>
-<p>
-The domestic dog (Canis lupus familiaris)[2][3] is a subspecies of the gray wolf (Canis lupus), a member of the Canidae family of the mammalian order Carnivora. The term "domestic dog" is generally used for both domesticated and feral varieties. The dog was the first domesticated animal[4] and has been the most widely kept working, hunting, and pet animal in human history. The word "dog" can also refer to the male of a canine species,[5] as opposed to the word "bitch" which refers to the female of the species.
-MtDNA evidence shows an evolutionary split between the modern dog's lineage and the modern wolf's lineage around 100,000 years ago but, as of 2013, the oldest fossil specimens genetically linked to the modern dog's lineage date to approximately 33,000–36,000 years ago.[4][6] Dogs' value to early human hunter-gatherers led to them quickly becoming ubiquitous across world cultures. Dogs perform many roles for people, such as hunting, herding, pulling loads, protection, assisting police and military, companionship, and, more recently, aiding handicapped individuals. This impact on human society has given them the nickname "man's best friend" in the Western world. In some cultures, however, dogs are also a source of meat.[7][8] In 2001, there were estimated to be 400 million dogs in the world.[9]
-Most breeds of dogs are at most a few hundred years old, having been artificially selected for particular morphologies and behaviors by people for specific functional roles. Through this selective breeding, the dog has developed into hundreds of varied breeds, and shows more behavioral and morphological variation than any other land mammal.[10] For example, height measured to the withers ranges from 15.2 centimetres (6.0 in) in the Chihuahua to about 76 cm (30 in) in the Irish Wolfhound; color varies from white through grays (usually called "blue") to black, and browns from light (tan) to dark ("red" or "chocolate") in a wide variation of patterns; coats can be short or long, coarse-haired to wool-like, straight, curly, or smooth.[11] It is common for most breeds to shed this coat.
-</p>
-<h2 id="Cats">Cats</h2>
-Dumb
+<br>
+<h2 id="LoadCrash"><b>How do I prevent the game from crashing during the loading screen?</b></h2>
+<p>Set the usePreload property to <b>0</b>. This may cause the game to pause briefly when transitioning between levels.</p>
+<br>
+<h2 id="Fast"><b>How do I make the game run faster?</b></h2>
+<p> Check if your computer has both an integrated graphics card and a dedicated graphics card.  Make sure that your system is using the dedicated card for Blob Game. </p>
+<p> Also try setting fullscreen to <b>0</b>, playing in a smaller window, and/or setting useLights to <b>0</b>.</p>
+<br>
+<h2 id="Slow"><b>How do I make the game run slower?</b></h2>
+<p> Some users have noticed that having vertical synchronization enabled causes their game to run at an abnormally high framerate.  Disable it by setting vSyncEnabled to <b>0</b>. </p>  
 </article>
 </div>
 </div>
