fixed error in FAQ

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -45,7 +45,7 @@
 <p> Also try setting fullscreen to <b>0</b>, playing in a smaller window, and/or setting useLights to <b>0</b>.</p>
 <br>
 <h2 id="Slow"><b>How do I make the game run slower?</b></h2>
-<p> Some users have noticed that having vertical synchronization enabled causes their game to run at an abnormally high framerate.  Disable it by setting vSyncEnabled to <b>0</b>. </p>  
+<p> Some users have noticed that having vertical synchronization enabled causes their game to run at an abnormally high framerate.  Disable it by setting useCPUSynch to <b>0</b>. </p>  
 </article>
 </div>
 </div>
