--- a/Faq/index.html
+++ b/Faq/index.html
@@ -34,7 +34,7 @@
 <p> Click the <b>Start</b> button and enter <b>%userprofile%/.BlobGame/BlobPref.txt</b> into the search box.</p>
 <p><img src="../images/blobpref.jpg"></p>
 <br>
-<p> Change the value to <b>0</b> to disable a feature, <b>1</b> to enable, or set an <b>interger value</b> for width and height. Remember to save after any changes. You can return to the default values by deleting this file and running the game.</p>
+<p> Change the value to <b>0</b> to disable a feature, <b>1</b> to enable, or set an <b>integer value</b> for width and height. Remember to save after any changes. You can return to the default values by deleting this file and running the game.</p>
 <p><img src="../images/blobpreftxt.jpg"></p>
 <br>
 <h2 id="LoadCrash"><b>How do I prevent the game from crashing during the loading screen?</b></h2>
