added thumbnails to media

--- a/Media/index.html
+++ b/Media/index.html
@@ -37,33 +37,33 @@
 </nav>
 
 <div class="box gallery" style="padding-top:0px;">
-	<a href="../images/media/LevelConceptA.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/LevelConceptA.jpg"></a>
-	<a href="../images/media/LevelConceptB.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/LevelConceptB.jpg"></a>
-	<a href="../images/media/blobeyes.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Positioning Blob's eyes"><img src="../images/media/blobeyes.jpg"></a>	
-	<a href="../images/media/concept1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept1.jpg"></a>
-	<a href="../images/media/concept2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept2.jpg"></a>
-	<a href="../images/media/concept3.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/concept3.jpg"></a>
-	<a href="../images/media/Blob1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 1 (2007)"><img src="../images/media/Blob1.jpg"></a>
-	<a href="../images/media/Blob2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 2 (2010)"><img src="../images/media/Blob2.jpg"></a>
-	<a href="../images/media/Blob3.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 3 (2012)"><img src="../images/media/Blob3.jpg"></a>
-	<a href="../images/media/points.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Particles used for collision in earier versions of Blob Game"><img src="../images/media/points.jpg"></a>
-	<a href="../images/media/springs.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Springs shown for a single particle"><img src="../images/media/springs.jpg"></a>
-	<a href="../images/media/bodies.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Triangle tank tread used in current version"><img src="../images/media/bodies.jpg"></a>
-	<a href="../images/media/maru.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dinner after a meeting"><img src="../images/media/maru.jpg"></a>
-	<a href="../images/media/controllersupport.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First controller tests"><img src="../images/media/controllersupport.jpg"></a>
-	<a href="../images/media/12player.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Testing with 12 players"><img src="../images/media/12player.jpg"></a>
-	<a href="../images/media/smoothing.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Bezier smoothing"><img src="../images/media/smoothing.jpg"></a>
-	<a href="../images/media/blobcollision.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Inter-blob collisions demonstration"><img src="../images/media/blobcollision.jpg"></a>
-	<a href="../images/media/concave.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Rendering a concave blob"><img src="../images/media/concave.jpg"></a>
+	<a href="../images/media/LevelConceptA.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/thumbs/LevelConceptA.jpg"></a>
+	<a href="../images/media/LevelConceptB.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/thumbs/LevelConceptB.jpg"></a>
+	<a href="../images/media/blobeyes.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Positioning Blob's eyes"><img src="../images/media/thumbs/blobeyes.jpg"></a>	
+	<a href="../images/media/concept1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/thumbs/concept1.jpg"></a>
+	<a href="../images/media/concept2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/thumbs/concept2.jpg"></a>
+	<a href="../images/media/concept3.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Concept Level"><img src="../images/media/thumbs/concept3.jpg"></a>
+	<a href="../images/media/Blob1.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 1 (2007)"><img src="../images/media/thumbs/Blob1.jpg"></a>
+	<a href="../images/media/Blob2.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 2 (2010)"><img src="../images/media/thumbs/Blob2.jpg"></a>
+	<a href="../images/media/Blob3.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob Game 3 (2012)"><img src="../images/media/thumbs/Blob3.jpg"></a>
+	<a href="../images/media/points.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Particles used for collision in earier versions of Blob Game"><img src="../images/media/thumbs/points.jpg"></a>
+	<a href="../images/media/springs.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Springs shown for a single particle"><img src="../images/media/thumbs/springs.jpg"></a>
+	<a href="../images/media/bodies.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Triangle tank tread used in current version"><img src="../images/media/thumbs/bodies.jpg"></a>
+	<a href="../images/media/maru.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Dinner after a meeting"><img src="../images/media/thumbs/maru.jpg"></a>
+	<a href="../images/media/controllersupport.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First controller tests"><img src="../images/media/thumbs/controllersupport.jpg"></a>
+	<a href="../images/media/12player.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Testing with 12 players"><img src="../images/media/thumbs/12player.jpg"></a>
+	<a href="../images/media/smoothing.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Bezier smoothing"><img src="../images/media/thumbs/smoothing.jpg"></a>
+	<a href="../images/media/blobcollision.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Inter-blob collisions demonstration"><img src="../images/media/thumbs/blobcollision.jpg"></a>
+	<a href="../images/media/concave.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Rendering a concave blob"><img src="../images/media/thumbs/concave.jpg"></a>
 	<a href="../images/media/suchanimation.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Such animation"><img src="../images/media/suchanimation.gif"></a>
 	<a href="../images/media/suchanimation2.gif" class="fancy-gallery" data-fancybox-group="gallery" title="Wow... much improved"><img src="../images/media/suchanimation2.gif"></a>
-	<a href="../images/media/butts.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Marketing brainstorm"><img src="../images/media/butts.jpg"></a>
-	<a href="../images/media/knight.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob knight"><img src="../images/media/knight.jpg"></a>
-	<a href="../images/media/horse.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Also a blob knight"><img src="../images/media/horse.jpg"></a>
-	<a href="../images/media/aot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Three dimensional maneuver gear blob"><img src="../images/media/aot.jpg"></a>
-	<a href="../images/media/scrum.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Failed stand-up meeting"><img src="../images/media/scrum.jpg"></a>
-	<a href="../images/media/vacbot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum bot"><img src="../images/media/vacbot.jpg"></a>
-	<a href="../images/media/wormhole.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First instance of the wormhole bug"><img src="../images/media/wormhole.jpg"></a>
+	<a href="../images/media/butts.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Marketing brainstorm"><img src="../images/media/thumbs/butts.jpg"></a>
+	<a href="../images/media/knight.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Blob knight"><img src="../images/media/thumbs/knight.jpg"></a>
+	<a href="../images/media/horse.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Also a blob knight"><img src="../images/media/thumbs/horse.jpg"></a>
+	<a href="../images/media/aot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Three dimensional maneuver gear blob"><img src="../images/media/thumbs/aot.jpg"></a>
+	<a href="../images/media/scrum.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Failed stand-up meeting"><img src="../images/media/thumbs/scrum.jpg"></a>
+	<a href="../images/media/vacbot.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="Vacuum bot"><img src="../images/media/thumbs/vacbot.jpg"></a>
+	<a href="../images/media/wormhole.jpg" class="fancy-gallery" data-fancybox-group="gallery" title="First instance of the wormhole bug"><img src="../images/media/thumbs/wormhole.jpg"></a>
 	<a href="https://www.youtube.com/embed/tt483XEo5cg" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Lighting Demonstration"><img src="http://img.youtube.com/vi/tt483XEo5cg/0.jpg"></a>
 	<a href="https://www.youtube.com/embed/_oeuyI6cLV4" class="fancybox.iframe fancy-gallery" data-fancybox-group="gallery" title="Gates Demonstration"><img src="http://img.youtube.com/vi/_oeuyI6cLV4/0.jpg"></a>
 </div>
