banner size change and initial download page work

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div id="wrapper">
-<a href="../"><img src="../images/tmpbanner.png"></a>
+<a href="../"><img id="banner" src="../images/tmpbanner.png"></a>
 <nav class="nav">
 	<ul>
-		<li><a href="../">Download</a></li>
+		<li><a href="../Download/">Download</a></li>
 		<li><a href="../Blog/">Blog</a></li>
 		<li><a href="../Media/">Media</a></li>
 		<li><a href="#">FAQ</a></li>
