--- a/Media/index.html
+++ b/Media/index.html
@@ -25,10 +25,10 @@
 </head>
 <body>
 <div id="wrapper">
-<a href="../"><img src="../images/tmpbanner.png"></a>
+<a href="../"><img id="banner" src="../images/tmpbanner.png"></a>
 <nav class="nav">
 	<ul>
-		<li><a href="../">Download</a></li>
+		<li><a href="../Download/">Download</a></li>
 		<li><a href="../Blog/">Blog</a></li>
 		<li><a href="#">Media</a></li>
 		<li><a href="../Faq/">FAQ</a></li>
