download page work

--- a/Download/index.html
+++ b/Download/index.html
@@ -19,6 +19,11 @@
 </nav>
 <div class="box" style="padding-top:0px;">
 <article>
+<h3>System Requirements:</h3>
+<ul style="margin:0;">
+<li>Java</li>
+<li>Electricity</li>
+</ul>
 <ul class="dl-btns">
 <li><a href="caw.txt" download="linuxBird.txt"><img src="../images/linux.png"></a><div><p>.jar - X MB</p></div></li>
 <li><a href="caw.txt" download="windowsBird.txt"><img src="../images/windows.png"></a><div><p>.exe - X MB</p></div></li>
