changed layout of download page still WIP

--- a/Download/index.html
+++ b/Download/index.html
@@ -19,16 +19,21 @@
 </nav>
 <div class="box" style="padding-top:0px;">
 <article>
-<h3>System Requirements:</h3>
-<ul style="margin:0;">
-<li>Java</li>
-<li>Electricity</li>
-</ul>
-<ul class="dl-btns">
-<li><a href="caw.txt" download="linuxBird.txt"><img src="../images/linux.png"></a><div><p>.jar - X MB</p></div></li>
-<li><a href="caw.txt" download="windowsBird.txt"><img src="../images/windows.png"></a><div><p>.exe - X MB</p></div></li>
-<li><a href="caw.txt" download="macBird.txt"><img src="../images/mac.png"></a><div><p>.dmg - X MB</p></div></li>
-</ul>
+<header>
+<h3>Download</h3>
+</header>
+<div class="dl-links" style="margin-top:10px;">
+<p><span>Mac OS:</span><a href="#MacDownload">.dmg</a>  <a href="#MacDownload?torrent">torrent</a></p>
+<p class="caption"><b>hash:N0T4R341H45H</b></p>
+</div>
+<div class="dl-links">
+<p><span>Windows: </span><a href="#WindowsDownload">.exe</a>  <a href="#WindowsDownload?torrent">torrent</a></p>
+<p class="caption"><b>hash:N0T4R341H45H</b></p>
+</div>
+<div class="dl-links">
+<p><span>Linux: </span><a href="#LinuxDownload">??</a>  <a href="#LinuxDownload?torrent">torrent</a></p>
+<p class="caption"><b>hash:N0T4R341H45H</b></p>
+</div>
 </article>
 </div>
 </div>
