--- a/Download/index.html
+++ b/Download/index.html
@@ -22,17 +22,19 @@
 <header>
 <h3>Download</h3>
 </header>
-<div class="dl-links" style="margin-top:10px;">
+<div class="dl-links">
+<div class="os-links" style="margin-top:10px;">
 <p><span>Mac OS:</span><a href="#MacDownload">.dmg</a>  <a href="#MacDownload?torrent">torrent</a></p>
 <p class="caption"><b>hash:N0T4R341H45H</b></p>
 </div>
-<div class="dl-links">
+<div class="os-links">
 <p><span>Windows: </span><a href="#WindowsDownload">.exe</a>  <a href="#WindowsDownload?torrent">torrent</a></p>
 <p class="caption"><b>hash:N0T4R341H45H</b></p>
 </div>
-<div class="dl-links">
+<div class="os-links">
 <p><span>Linux: </span><a href="#LinuxDownload">??</a>  <a href="#LinuxDownload?torrent">torrent</a></p>
 <p class="caption"><b>hash:N0T4R341H45H</b></p>
+</div>
 </div>
 </article>
 </div>
