--- a/Download/index.html
+++ b/Download/index.html
@@ -19,21 +19,15 @@
 </nav>
 <div class="box" style="padding-top:0px;">
 <article>
-<header>
-<h3>Download</h3>
-</header>
 <div class="dl-links">
 <div class="os-links" style="margin-top:10px;">
-<p><span>Mac OS:</span><a href="#MacDownload">.dmg</a>  <a href="#MacDownload?torrent">torrent</a></p>
-<p class="caption"><b>hash:N0T4R341H45H</b></p>
+<p><span>Mac OS:</span><a href="#MacDownload">.dmg</a>  <a href="#MacDownload?torrent">torrent</a><span class="hash"><b>hash:N0T4R341H45H</b></span></p>
 </div>
 <div class="os-links">
-<p><span>Windows: </span><a href="#WindowsDownload">.exe</a>  <a href="#WindowsDownload?torrent">torrent</a></p>
-<p class="caption"><b>hash:N0T4R341H45H</b></p>
+<p><span>Windows: </span><a href="#WindowsDownload">.exe</a>  <a href="#WindowsDownload?torrent">torrent</a><span class="hash"><b>hash:N0T4R341H45H</b></span></p>
 </div>
 <div class="os-links">
-<p><span>Linux: </span><a href="#LinuxDownload">??</a>  <a href="#LinuxDownload?torrent">torrent</a></p>
-<p class="caption"><b>hash:N0T4R341H45H</b></p>
+<p><span>Linux: </span><a href="#LinuxDownload">??</a>  <a href="#LinuxDownload?torrent">torrent</a><span class="hash"><b>hash:N0T4R341H45H</b></span></p>
 </div>
 </div>
 </article>
