added link to subreddit

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -14,7 +14,7 @@
 		<li><a href="../Blog/">Blog</a></li>
 		<li><a href="../Media/">Media</a></li>
 		<li><a href="#">FAQ</a></li>
-		<li><a href="#forumDomain">Forum</a></li>
+		<li><a href="http://reddit.com/r/blobgame">r/blobgame</a></li>
 	</ul>
 </nav>
 <div class="box" style="padding-top:0px;">
@@ -23,7 +23,6 @@
 <h1>Frequently Asked Questions</h1>
 <ul>
 	<li><a href="#Prefs" rel="internal">How do I modify my game preferences?</a></li>
-	<li><a href="#LoadCrash" rel="internal">How do I prevent the game from crashing during the loading screen?</a></li>
 	<li><a href="#Fast" rel="internal">How do I make the game run faster?</a></li>
 	<li><a href="#Controller" rel="internal">How do I play with a controller?</a></li>
 </ul>
@@ -36,7 +35,6 @@
 	<span>"fullscreen":1,</span>
 	<span>"height":720,</span>
 	<span>"width":1280,</span>
-	<span>"useCPUSynch":0,</span>
 	<span>"useLights":1,</span>
 	<span>"vSyncEnabled":1,</span>
 	<span>"useGL20":1,</span>
@@ -54,9 +52,6 @@
 <br>
 <h3>Linux:</h3>
 <p>In <b>Terminal</b>, enter <b>vim $home/.BlobGame/BlobPref.txt</b></p>
-<br>
-<h2 id="LoadCrash"><b>How do I prevent the game from crashing during the loading screen?</b></h2>
-<p>Set the usePreload property to <b>0</b>. This may cause the game to pause briefly when transitioning between levels.</p>
 <br>
 <h2 id="Fast"><b>How do I make the game run faster?</b></h2>
 <p> Check if your computer has both integrated graphics and a dedicated graphics card.  Make sure that your system is using the dedicated card for Blob Game. </p>
