new os icons and new font!

--- a/Faq/index.html
+++ b/Faq/index.html
@@ -14,7 +14,7 @@
 		<li><a href="../Blog/">Blog</a></li>
 		<li><a href="../Media/">Media</a></li>
 		<li><a href="#">FAQ</a></li>
-		<li><a href="http://reddit.com/r/blobgame">r/blobgame</a></li>
+		<li><a href="http://reddit.com/r/blobgame" target="_blank">r/blobgame</a></li>
 	</ul>
 </nav>
 <div class="box" style="padding-top:0px;">
