--- a/Media/index.html
+++ b/Media/index.html
@@ -32,7 +32,7 @@
 		<li><a href="../Blog/">Blog</a></li>
 		<li><a href="#">Media</a></li>
 		<li><a href="../Faq/">FAQ</a></li>
-		<li><a href="#forumDomain">Forum</a></li>
+		<li><a href="http://reddit.com/r/blobgame" target="_blank">r/blobgame</a></li>
 	</ul>
 </nav>
 
