--- a/Faq/index.html
+++ b/Faq/index.html
@@ -10,10 +10,11 @@
 <a href="../"><img id="banner" src="../images/tmpbanner.png"></a>
 <nav class="nav">
 	<ul>
-		<li><a href="../Download/">Download</a></li>
-		<li><a href="../Blog/">Blog</a></li>
-		<li><a href="../Media/">Media</a></li>
-		<li><a href="#">FAQ</a></li>
+		<li><a href="Download/">Download</a></li>
+		<li><a href="About/">About</a></li>
+		<li><a href="Blog/">Blog</a></li>
+		<li><a href="Media/">Media</a></li>
+		<li><a href="Faq/">FAQ</a></li>
 		<li><a href="http://reddit.com/r/blobgame" target="_blank">r/blobgame</a></li>
 	</ul>
 </nav>
