updated icons and attribution

--- a/About/index.html
+++ b/About/index.html
@@ -62,7 +62,7 @@ With modest contributions by: Matthew Crabill, Tyler Wolverton, Lee Opfer, Eric 
 </p>
 
 <p>
-Blob Game was written in Java using libGDX, Box2D, box2DLights, reflections, polygonizer.
+Blob Game was written in Java using <a href="http://libgdx.badlogicgames.com/">libgdx</a>, <a href="http://box2d.org/">Box2D</a>, <a href="https://code.google.com/p/box2dlights/">box2Dlights<a>, and <a href="https://code.google.com/p/reflections/">reflections</a>.
 </p>
 
 </article>
