images and trying stuff with downloads

--- a/Media/index.html
+++ b/Media/index.html
@@ -28,7 +28,7 @@
 <a href="../"><img id="banner" src="../images/tmpbanner.png"></a>
 <nav class="nav">
 	<ul>
-		<li><a href="../Download/">Download</a></li>
+		<li><a href="../#Download">Download</a></li>
 		<li><a href="../About/">About</a></li>
 		<li><a href="../Media/">Media</a></li>
 		<li><a href="../Faq/">FAQ</a></li>
