--- a/About/index.html
+++ b/About/index.html
@@ -58,7 +58,7 @@ The first versions of Blob Game were made by Ben Pietrzak in <a href="Classic/bl
 
 </div>
 <p>
-With modest contributions by: Matthew Crabill, Tyler Wolverton, Lee Opfer, Eric Todd, Anshi Chitransh, and Tyler Springer.
+With contributions by: Matthew Crabill, Tyler Wolverton, Lee Opfer, Eric Todd, Anshi Chitransh, and Tyler Springer.
 </p>
 
 <p>
