--- a/About/index.html
+++ b/About/index.html
@@ -22,7 +22,7 @@
 <h1>About Blob Game</h1>
 
 <p>
-The first versions of Blob Game were made by Ben Pietrzak in <a href="../Classic/blob.html">2006</a>, <a href="../Classic/blob2.html">2010</a>, and <a href="../Classic/blob3.html">2012</a>.  Work on the current version began in January 2013 by a team of Purdue University students:
+The first versions of Blob Game were made by Ben Pietrzak in <a href="../classic/blob.html">2006</a>, <a href="../classic/blob2.html">2010</a>, and <a href="../classic/blob3.html">2012</a>.  Work on the current version began in January 2013 by a team of Purdue University students:
 </p>
 
 <div>
